# Asteroids2D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/sprites/: player_sheet.xml
res/windows/: win_res.rc
src/asteroids2d/private/: main.cpp
src/asteroids2d/windows/: CMakeLists.txt
src/asteroids2d/windows/public/: main.hpp
